--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
 body{
     background-color: #006994;
 }
+img, iframe{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .modal {
     display: none; 
     position: fixed; 
@@ -46,7 +53,7 @@ body{
   
 .modal-header {
     padding: 2px 16px;
-    background-color: #5cb85c;
+    background-color: #004f2a;
     color: white;
 }
   
@@ -54,7 +61,7 @@ body{
   
 .modal-footer {
     padding: 2px 16px;
-    background-color: #5cb85c;
+    background-color: #004f2a;
     color: white;
 }
 svg path{
